--- a/petrocarga/app/globals.css
+++ b/petrocarga/app/globals.css
@@ -1,30 +1,61 @@
-
 @import "tailwindcss";
 @import "tw-animate-css";
 
 @custom-variant dark (&:is(.dark *));
 
+.my-custom-geocoder {
+  border-radius: 16px;
+  background-color: #f9fafb;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+}
+
+.my-custom-geocoder input {
+  padding: 12px 35px;
+  font-size: 15px;
+}
+
 @layer utilities {
   @keyframes blob {
-    0%, 100% { transform: translate(0, 0) scale(1); }
-    33% { transform: translate(30px, -50px) scale(1.1); }
-    66% { transform: translate(-20px, 20px) scale(0.9); }
+    0%,
+    100% {
+      transform: translate(0, 0) scale(1);
+    }
+    33% {
+      transform: translate(30px, -50px) scale(1.1);
+    }
+    66% {
+      transform: translate(-20px, 20px) scale(0.9);
+    }
   }
-  
+
   @keyframes shake {
-    0%, 100% { transform: translateX(0); }
-    10%, 30%, 50%, 70%, 90% { transform: translateX(-5px); }
-    20%, 40%, 60%, 80% { transform: translateX(5px); }
+    0%,
+    100% {
+      transform: translateX(0);
+    }
+    10%,
+    30%,
+    50%,
+    70%,
+    90% {
+      transform: translateX(-5px);
+    }
+    20%,
+    40%,
+    60%,
+    80% {
+      transform: translateX(5px);
+    }
   }
 
   .animate-blob {
     animation: blob 7s infinite;
   }
-  
+
   .animate-blob-delayed {
     animation: blob 7s infinite 2s;
   }
-  
+
   .animate-blob-more-delayed {
     animation: blob 7s infinite 4s;
   }
@@ -151,4 +182,3 @@
     @apply bg-background text-foreground;
   }
 }
-
